--- a/.env
+++ b/.env
@@ -33,4 +33,4 @@ RABBITMQ_ERLANG_COOKIE=secret-erlang-cookie  # unique value shared by any connec
 ATTACHMENTS_MAX_AGE=360  # token expiration date (in seconds)
 
 # Taiga's Telemetry - Variable to enable or disable the anonymous telemetry
-ENABLE_TELEMETRY=True
+ENABLE_TELEMETRY=False
