Remake Docker instructions (Close #1)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,7 +55,10 @@ services:
       - taiga
 
   taiga-back:
-    image: taigaio/taiga-back:latest
+    image: dopustim/taiga-back
+    build:
+      context: https://github.com/DopustimVladimir/taiga-back.git#main
+      dockerfile: ./docker/Dockerfile
     environment: *default-back-environment
     volumes: *default-back-volumes
     networks:
@@ -69,7 +72,10 @@ services:
         condition: service_healthy
 
   taiga-async:
-    image: taigaio/taiga-back:latest
+    image: dopustim/taiga-back
+    build:
+      context: https://github.com/DopustimVladimir/taiga-back.git#main
+      dockerfile: ./docker/Dockerfile
     entrypoint: ["/taiga-back/docker/async_entrypoint.sh"]
     environment: *default-back-environment
     volumes: *default-back-volumes
@@ -103,7 +109,10 @@ services:
       - taiga
 
   taiga-front:
-    image: taigaio/taiga-front:latest
+    image: dopustim/taiga-front
+    build:
+      context: https://github.com/DopustimVladimir/taiga-front.git#main
+      dockerfile: ./docker/Dockerfile
     environment:
       TAIGA_URL: "${TAIGA_SCHEME}://${TAIGA_DOMAIN}"
       TAIGA_WEBSOCKETS_URL: "${WEBSOCKETS_SCHEME}://${TAIGA_DOMAIN}"
