--- a/docker-compose-inits.yml
+++ b/docker-compose-inits.yml
@@ -19,7 +19,10 @@ x-volumes:
 
 services:
   taiga-manage:
-    image: taigaio/taiga-back:latest
+    image: dopustim/taiga-back
+    build:
+      context: https://github.com/DopustimVladimir/taiga-back.git#main
+      dockerfile: ./docker/Dockerfile
     environment: *default-back-environment
     depends_on:
       - taiga-db
